test/errors/error41.vult
fun main() {
  val kk : array(real);
}
